# logfalcon

./: .gitignore  CHANGELOG.md  FC_COMPATIBILITY_ANALYSIS.md  Makefile  PROJECT_STATUS.md  README.md  go.mod  go.sum  guide.html  index.html  install.sh  pyproject.toml  styles.css
.github/: dependabot.yml
.github/workflows/: build-image.yml  ci.yml  go-ci.yml  security.yml
bbsyncer/: __init__.py  config.py
bbsyncer/storage/: manifest.py
bbsyncer/sync/: orchestrator.py
bbsyncer/web/: server.py
boot/: bbsyncer-config.txt  logfalcon-config.txt
cmd/logfalcon/: main.go
config/: bbsyncer.toml  logfalcon.toml
docs/: app.js  guide.css  guide.html  index.html  styles.css
internal/config/: config.go  config_test.go
internal/fc/: detector.go  detector_test.go
internal/led/: controller.go  controller_test.go
internal/msp/: client.go  client_test.go  constants.go  crc.go  crc_test.go  framing.go  framing_test.go  huffman.go  huffman_test.go
internal/storage/: manifest.go  manifest_test.go  writer.go  writer_test.go
internal/sync/: orchestrator.go  orchestrator_test.go
internal/util/: disk.go
internal/web/: server.go  server_test.go  templates.go
logfalcon/: __init__.py  config.py
logfalcon/fc/: detector.py
logfalcon/led/: controller.py
logfalcon/msp/: client.py
logfalcon/storage/: manifest.py
logfalcon/sync/: orchestrator.py
logfalcon/web/: _templates.py  server.py
pi-gen/: build.sh  config
pi-gen/stage-bbsyncer/00-install-bbsyncer/: 02-run-chroot.sh  03-run-chroot.sh
pi-gen/stage-logfalcon/00-install-logfalcon/: 00-run-chroot.sh  00-run.sh  02-run-chroot.sh  03-run-chroot.sh
scripts/: inspect-image.sh  install.sh  uninstall.sh
system/: 99-betaflight-fc.rules  firstboot.sh  logfalcon-firstboot.service  logfalcon-ready-led.service  logfalcon-ready-led.sh  logfalcon-web.service  logfalcon@.service
tests/: test_config.py  test_led_controller.py  test_manifest.py  test_msp_client.py  test_sync_orchestrator.py  test_web_server.py
