[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betaflight-blackbox-field-sync"
version = "0.1.1"
description = "Field blackbox log syncer for Betaflight FCs via Raspberry Pi Zero W"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "pyserial>=3.5",
    "RPi.GPIO>=0.7.1; platform_machine in 'armv6l armv7l aarch64'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
bbsyncer = "bbsyncer.__main__:main"

[tool.setuptools]
ext-modules = [
    { name = "bbsyncer._native._msp_fast", sources = ["bbsyncer/_native/_msp_fast.c"] },
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bbsyncer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (allowed in tests via per-file-ignores)
    "S104",   # binding to all interfaces (intentional for Wi-Fi hotspot server)
    "S603",   # subprocess call with shell=false (not relevant)
    "S607",   # starting a process with a partial path
    "S608",   # false positive on f-string HTML construction (not SQL)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108"]

[tool.ruff.format]
quote-style = "single"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B104", "B404", "B603", "B607", "B608"]
